@@ -1,3 +1,13 @@
+2010-07-20  Man Lung Wong  mwong@redhat.com>
+
+	* netx/net/sourceforge/jnlp/SecurityDesc.java:
+	Add permission to read javawebstart.version 
+	property as part of sandbox permission.
+
+	* netx/net/sourceforge/jnlp/runtime/JNLPRuntime.java (initialize):
+	Set the javawebstart.version property as part of System property
+	whenever a jnlp file is being launched.
+	
 2010-07-20  Mark Wielaard  <mjw@redhat.com>
 
 	* configure.ac (OPENJDK_BUILD_DIR): New AC_SUBST variable.
